clean code: removes warnings